--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ border-radius: 7px;
 
 .main-content{
     background-color: purple;
-
+    width:600px;
     padding: 20px;
     border-radius: 10px;
     margin:0 auto;
